<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bmi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ebookfrenzy.bmi.BMI">


    <TextView
        android:text="@string/weight_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="26dp"
        android:id="@+id/weightTextView" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/height_edit_text"
        android:ems="10"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:id="@+id/heightEditText"
        android:inputType="numberDecimal"
        android:hint="@string/height_edit_text_hint" />

    <TextView
        android:text="@string/height_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/weightEditText"
        android:layout_alignStart="@+id/weightTextView" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/weightEditText"
        android:inputType="number"
        android:hint="@string/weight_edit_text_hint"
        android:text="@string/weight_edit_text"
        android:layout_below="@+id/weightTextView"
        android:layout_toEndOf="@+id/weightTextView" />

    <SeekBar
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heightEditText"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:id="@+id/heightSeekBar" />

    <TextView
        android:text="@string/BMI_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heightSeekBar"
        android:layout_toStartOf="@+id/weightEditText"
        android:layout_marginTop="47dp"
        android:id="@+id/bmiTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BMI_edit_text"
        android:ems="10"
        android:layout_alignTop="@+id/bmiTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="21dp"
        android:id="@+id/BMI_EditText"
        android:inputType="numberDecimal"
        android:hint="@string/BMI_edit_text_hint" />
</RelativeLayout>
